revert z-index fix

--- a/static/carousel/css/modal/styles.css
+++ b/static/carousel/css/modal/styles.css
@@ -35,6 +35,11 @@ body  {
   padding-bottom: 56.25%;
 }
 
+.tvplayer-overlay, .tvplayer-overlay-thumbnail {
+  z-index: 2147483 !important;
+}
+
+
 .tvp-player-holder {
   width: 80%;
   float: left;
